[package]
name = "wallet-keygen"
version = "0.1.0"
edition = "2021"
authors = ["Parthipan Natkunam"]
description = "A CLI tool to generate BIP44 standard wallet keys from mnemonics"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Parthipan-Natkunam/Wallet-Keys"
repository = "https://github.com/Parthipan-Natkunam/Wallet-Keys"
keywords = ["ethereum", "wallet", "bip44", "cryptocurrency", "cli"]
categories = ["command-line-utilities", "cryptocurrency"]

[dependencies]
bip39 = "2.0.0"         # For mnemonic handling
bitcoin = { version = "0.29.2", features = ["rand"] }  # For BIP32 key derivation
hex = "0.4.3"           # For hex encoding/decoding
clap = { version = "4.4.11", features = ["derive"] }  # For CLI argument parsing
anyhow = "1.0.75"       # For error handling
colored = "2.0.4"       # For colored output
tiny-keccak = { version = "2.0.2", features = ["keccak"] }  # For Ethereum address generation
secp256k1 = { version = "0.27.0", features = ["rand-std"] }  # For key operations

[[bin]]
name = "wallet-keygen"
path = "src/main.rs"
